<resources>
    <string name="app_name">Top Ten Indonesia Movies</string>
    <string name="app_label">Top 10 IDMovies</string>
    <string name="author">Charles Bintang</string>
    <string name="author_email">charlesbintang203@gmail.com</string>
    <integer-array name="author_photo">
        <item>@drawable/profile</item>
    </integer-array>


    <string name="title">Nama Movie</string>
    <string name="description">Deskripsi</string>
    <string name="tahun">Tahun</string>
    <string name="sutradara">Sutradara</string>
    <string name="produksi">Produksi</string>
    <string name="penonton">Penonton</string>
    <string name="poster">Poster</string>
    <string name="about_me">About Me</string>
    <string-array name="data_judul">
        <item>KKN di Desa Penari</item>
        <item>Agak Laen</item>
        <item>Warkop DKI Reborn: Jangkrik Boss! Part 1</item>
        <item>Pengabdi Setan 2: Communion</item>
        <item>Dilan 1990</item>
        <item>Miracle in Cell No. 7</item>
        <item>Dilan 1991</item>
        <item>Sewu Dino</item>
        <item>Laskar Pelangi</item>
        <item>Habibie &amp; Ainun</item>
    </string-array>
    <string-array name="data_penonton">
        <item>10.061.033</item>
        <item>8.000.000</item>
        <item>6.858.616</item>
        <item>6.391.982</item>
        <item>6.315.664</item>
        <item>5.860.917</item>
        <item>5.253.411</item>
        <item>4.891.609</item>
        <item>4.719.453</item>
        <item>4.601.249</item>
    </string-array>
    <string-array name="data_produksi">
        <item>MD Pictures</item>
        <item>Imajinari</item>
        <item>Falcon Pictures</item>
        <item>Rapi Films</item>
        <item>Max Pictures</item>
        <item>Falcon Pictures</item>
        <item>Max Pictures</item>
        <item>MD Pictures</item>
        <item>Miles Films</item>
        <item>MD Pictures</item>
    </string-array>
    <string-array name="data_tahun">
        <item>2022</item>
        <item>2024</item>
        <item>2016</item>
        <item>2022</item>
        <item>2018</item>
        <item>2022</item>
        <item>2019</item>
        <item>2023</item>
        <item>2008</item>
        <item>2012</item>
    </string-array>
    <string-array name="data_sutradara">
        <item>Awi Suryadi</item>
        <item>Muhadkly Acho</item>
        <item>Anggy Umbara</item>
        <item>Joko Anwar</item>
        <item>Fajar Bustomi, Pidi Baiq</item>
        <item>Hanung Bramantyo</item>
        <item>Fajar Bustomi, Pidi Baiq</item>
        <item>Kimo Stamboel</item>
        <item>Riri Riza</item>
        <item>Faozan Rizal</item>
    </string-array>
    <string-array name="data_description">
        <item>
            Enam mahasiswa, Nur, Widya, Ayu, Bima, Anton, dan Wahyu, melaksanakan Kuliah Kerja Nyata (KKN) di desa yang mereka pikir biasa saja.
            Namun, peringatan dari Pak Prabu, kepala desa, tentang batas terlarang di desa itu menjadi awal dari petualangan menyeramkan mereka.
            Perubahan sikap yang mengejutkan dari salah seorang dari mereka, Bima, membuat program KKN mereka berantakan.
            Ketika keanehan mulai terasa, sosok penari misterius mulai meneror mereka. Mbah Buyut, seorang dukun setempat, menjadi satu-satunya harapan untuk mengungkap misteri yang mengancam nyawa mereka di Desa Penari.
        </item>
        <item>
            Demi mengejar mimpi untuk mengubah nasib, empat sekawan penjaga rumah hantu di pasar malam, mencari cara baru menakuti pengunjung agar selamat dari kebangkrutan. Sialnya, usaha Bene, Jegel, Boris dan Oki malah memakan korban jiwa salah satu pengunjungnya. Karena panik, korban tersebut mereka kubur di dalam rumah hantu.
            Di luar dugaan, arwah si korban malah gentayangan, membuat rumah hantunya jadi seram dan ramai pengunjung. Ketika polisi mulai menyelidiki, mereka pun terpaksa melakukan berbagai persekongkolan konyol untuk menutupi kejadian sebenarnya. Bagaimana nasib mereka selanjutnya?
        </item>
        <item>
            Film yang menghidupkan kembali legenda trio komedi Warkop. Dono, Kasino dan Indro kembali beraksi di tengah hiruk pikuknya kota DKI Jakarta. Mereka sekali lagi berperan sebagai personel sebuah Lembaga Swasta yang bernama CHIIPS (Cara Hebat Ikut-Ikutan Penanggulangan Sosial). Walaupun di dalam diri mereka dipenuhi semangat yang menggelora dalam menjalankan tugas-tugasnya melayani masyarakat, namun kekacauan dan huru-hara selalu mereka timbulkan akibat aksi mereka yang konyol dan selalu mengocok perut.
        </item>
        <item>
            Beberapa tahun setelah berhasil menyelamatkan diri dari kejadian mengerikan yang membuat mereka kehilangan ibu dan si bungsu Ian, Rini dan adik-adiknya, Toni dan Bondi, serta Bapak tinggal di rumah susun karena percaya tinggal di rumah susun aman jika terjadi sesuatu karena ada banyak orang.
        </item>
        <item>
            Milea (Vanesha Prescilla) bertemu dengan Dilan (Iqbaal Ramadhan) di sebuah SMA di Bandung. Itu adalah tahun 1990, saat Milea pindah dari Jakarta ke Bandung. Perkenalan yang tidak biasa kemudian membawa Milea mulai mengenal keunikan Dilan lebih jauh. Dilan yang pintar, baik hati dan romantis. semua dengan caranya sendiri.
            Cara Dilan mendekati Milea tidak sama dengan teman-teman lelakinya yang lain, bahkan Beni, pacar Milea di Jakarta. Bahkan cara berbicara Dilan yang terdengar kaku,
            lambat laun justru membuat Milea kerap merindukannya jika sehari saja ia tak mendengar suara itu. Perjalanan hubungan mereka tak selalu mulus. Beni, gank motor, tawuran, Anhar, Kang Adi, semua mewarnai perjalanan itu. Dan Dilan.
            dengan caranya sendiri selalu bisa membuat Milea percaya ia bisa tiba di tujuan dengan selamat. Tujuan dari perjalanan ini. Perjalanan mereka berdua. Katanya, dunia SMA adalah dunia paling indah. Dunia Milea dan Dilan satu tingkat lebih indah daripada itu.
        </item>
        <item>
            Dodo Rozak hanya ingin menjadi ayah yang baik bagi anaknya, Kartika, sekalipun dia hanyalah pria dengan kecerdasan terbatas, bertingkah dan berperilaku seperti anak-anak. Pada kenyataannya, justru Kartika yang lebih sering menjaga dan merawat ayahnya. Tapi keduanya hidup bahagia. Kartika bangga pada ayahnya yang berjualan balon sehari-harinya. Tapi kebahagiaan mereka tidak berlangsung lama ketika keduanya harus dipisahkan. Dodo ditangkap atas tuduhan memperkosa dan membunuh gadis kecil bernama Melati. Dodo dimasukkan ke penjara, dimasukkan dalam sel No.7 yang dihuni oleh napi-napi beringas lainnya (Indro Warkop, Tora Sudiro, Bryan Domani, Indra Jegel, Rigen) Setelah berbagai peristiwa yang dialami Dodo di penjara, Dodo berhasil mendapatkan bantuan untuk menyelundupkan Kartika ke dalam selnya. Kedekatan Dodo dan Kartika menularkan kebahagiaan bagi napi dan sipir di Penjara. Mereka mulai ragu apakah pria penyayang seperti Dodo, tega membunuh Melati.
        </item>
        <item>
            Dilan dan Milea telah resmi berpacaran.
            Ditengah kebahagiaan mereka berdua, Dilan terancam dipecat dari sekolah akibat perkelahiannya dengan Anhar. Dilan juga semakin sering berkelahi dan mendapatkan musuh. Milea khawatir dengan masa depan Dilan jika terus-
            terusan terlibat dalam masalah. Sebagai pacar Dilan, Milea merasa berhak melarang Dilan untuk terlibat dalam geng motor. Suatu ketika, Dilan dikeroyok oleh orang yang tidak dikenal. Saat Dilan mengetahui siapa yang berbuat, ia merencanakan balas dendam. Milea yang sudah putus asa
            karena Dilan yang keras kepala, akhirnya meminta Dilan berhenti dari geng motor atau hubungan mereka berakhir. Dilan terdiam.
            Tetapi, Dilan tetaplah Dilan, seorang panglima tempur, ketua geng motor yang akan selalu terlibat masalah dan
            mengundang musuh untuk menghajarnya.
            Ditengah semua masalah itu, hadir Yugo, anak dari sepupu jauh ayahnya Milea yang baru saja pulang dari Belgia. Untuk beberapa saat, Mereka sering menghabiskan waktu bersama.Yugo menyukai Milea.
            Dan Milea hanya mencintai Dilan
        </item>
        <item>
            Ditengah kesulitan ekonomi, Sri diterima bekerja untuk keluarga Atmojo dengan bayaran yang tinggi, karena keunikan yang ia miliki, yaitu lahir pada hari Jumat Kliwon. Bersama Erna dan Dini, mereka dibawa ke sebuah gubuk tersembunyi di tengah hutan. Di gubuk tersebut, Sri, Erna, dan Dini bertugas untuk memandikan Dela Atmojo, cucu dari Mbah Karsa Atmojo yang tidak sadarkan diri karena kutukan santet Sewu Dino, salah satu santet yang paling mengerikan. Mereka tidak bisa lari dari gubuk tersebut karena terikat perjanjian mistis dengan Mbah Karsa Atmojo, dan mereka harus selesaikan ritual sampai hari ke 1000. Jika melanggar, kematian menanti mereka.
        </item>
        <item>
            Laskar Pelangi menceritakan kisah anak-anak dari Desa Belitung yang dikategorikan sebagai anak-anak miskin di Belitung. Anak-anak tersebut tidak berhenti berusaha untuk memperbaiki masa depan mereka. Mereka merupakan siswa SD Muhammadiyah, SD tertua di desa Belitung. Di sekolah ini terdiri dari 10 siswa, hingga tak lepas dari ancaman penutupan.
        </item>
        <item>
            Ini adalah kisah tentang apa yang terjadi bila kamu menemukan belahan hatimu. Kisah tentang cinta pertama dan cinta terakhir. Kisah tentang Presiden ketiga Indonesia dan ibu negara. Kisah tentang Habibie dan Ainun.
            Rudy Habibie seorang jenius ahli pesawat terbang yang punya mimpi besar: berbakti kepada bangsa Indonesia dengan membuat truk terbang untuk menyatukan Indonesia. Sedangkan Ainun adalah seorang dokter muda cerdas yang dengan jalur karir terbuka lebar untuknya.
            Pada tahun 1962, dua kawan (atau musuh) SMP ini bertemu lagi di Bandung. Habibie langsung jatuh cinta seketika pada Ainun yang baginya semanis gula putih. Tapi Ainun, dia tak hanya jatuh cinta, dia iman pada visi dan mimpi Habibie. Mereka menikah dan terbang ke Jerman.
            Punya mimpi tak akan pernah mudah. Habibie dan Ainun tahu itu. Cinta mereka terbangun dalam perjalanan mewujudkan mimpi. Dinginnya salju Jerman, pengorbanan, rasa sakit, kesendirian serta godaan harta dan kuasa saat mereka kembali ke Indonesia mengiringi perjalanan dua hidup menjadi satu.
            Bagi Habibie, Ainun adalah segalanya. Ainun adalah mata untuk melihat hidupnya. Bagi Ainun, Habibie adalah segalanya, pengisi kasih dalam hidupnya. Namun setiap kisah mempunyai akhir, setiap mimpi mempunyai batas. Kemudian pada satu titik, dua belahan jiwa ini tersadar; Apakah cinta mereka akan bisa terus abadi?
        </item>
    </string-array>
    <string-array name="data_poster">
        <item>https://upload.wikimedia.org/wikipedia/id/thumb/b/b7/KKN_di_Desa_Penari.jpg/220px-KKN_di_Desa_Penari.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/thumb/0/01/Poster_Agak_Laen_%282024%29.jpg/220px-Poster_Agak_Laen_%282024%29.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/thumb/5/55/WDKI_reborn.jpg/220px-WDKI_reborn.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/2/26/Pengabdi_Setan_2.jpeg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/1/19/Dilan_1990_%28poster%29.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/8/8a/Miracle_in_Cell_No_7_Indonesian_remake_film_2022_Official_poster.jpeg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/c/cc/Dilan_1991_Film_Poster.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/thumb/0/0c/Sewu_Dino.jpg/220px-Sewu_Dino.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/thumb/1/17/Laskar_Pelangi_film.jpg/220px-Laskar_Pelangi_film.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/7/74/Habibie_Ainun_Poster.jpg</item>
    </string-array>
</resources>